Update FR admin

--- a/translations/admin+intl-icu.fr.xlf
+++ b/translations/admin+intl-icu.fr.xlf
@@ -4644,7 +4644,7 @@
       <notes>
         <note category="german">AP zum Freilegen der Ruine:</note>
         <note category="from">twig:///templates/ajax/admin/towns/explorer.html.twig</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>AP zum Freilegen der Ruine:</source>
@@ -4655,7 +4655,7 @@
       <notes>
         <note category="german">Camping-Ausbaulevel:</note>
         <note category="from">twig:///templates/ajax/admin/towns/explorer.html.twig</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Camping-Ausbaulevel:</source>
@@ -4666,7 +4666,7 @@
       <notes>
         <note category="german">Basis:</note>
         <note category="from">twig:///templates/ajax/admin/towns/explorer.html.twig</note>
-        <note category="state">new</note>
+        <note category="state">translated</note>
       </notes>
       <segment>
         <source>Basis:</source>
