ES EtwinID note

--- a/translations/docs+intl-icu.es.xlf
+++ b/translations/docs+intl-icu.es.xlf
@@ -1329,7 +1329,7 @@
       </notes>
       <segment>
         <source>Die Eternaltwin-ID, wenn er sein Konto verknüpft hat</source>
-        <target>Die Eternaltwin-ID, wenn er sein Konto verknüpft hat</target>
+        <target>El ID de Eternaltwin, si ha vinculado su cuenta</target>
       </segment>
     </unit>
     <unit id="DsWqhTO" name="Eternaltwin-ID des Spielers">
@@ -1340,7 +1340,7 @@
       </notes>
       <segment>
         <source>Eternaltwin-ID des Spielers</source>
-        <target>Eternaltwin-ID des Spielers</target>
+        <target>El ID de Eternaltwin del jugador</target>
       </segment>
     </unit>
   </file>
