ES advanced PM editor correction

--- a/translations/soul+intl-icu.es.xlf
+++ b/translations/soul+intl-icu.es.xlf
@@ -4564,7 +4564,7 @@
       </notes>
       <segment>
         <source>Standartmäßig die erweiterte Editor-Ansicht für PNs verwenden</source>
-        <target>Usar la vista avanzada del editor para MDs por defecto</target>
+        <target>Usar por defecto el editor avanzado de texto en los MP</target>
       </segment>
     </unit>
   </file>
