--- a/translations/admin+intl-icu.es.xlf
+++ b/translations/admin+intl-icu.es.xlf
@@ -4644,7 +4644,7 @@
       </notes>
       <segment>
         <source>AP zum Freilegen der Ruine:</source>
-        <target>AP zum Freilegen der Ruine:</target>
+        <target>PA para desenterrar la ruina:</target>
       </segment>
     </unit>
     <unit id="CbDV2Yg" name="Camping-Ausbaulevel:">
@@ -4655,7 +4655,7 @@
       </notes>
       <segment>
         <source>Camping-Ausbaulevel:</source>
-        <target>Camping-Ausbaulevel:</target>
+        <target>Nivel de acampe:</target>
       </segment>
     </unit>
     <unit id="NgXFePi" name="Basis:">
@@ -4666,7 +4666,7 @@
       </notes>
       <segment>
         <source>Basis:</source>
-        <target>Basis:</target>
+        <target>Base:</target>
       </segment>
     </unit>
   </file>
