--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -22911,7 +22911,7 @@
       </notes>
       <segment>
         <source>Mit dem richtigen Schlüssel kannst du diese Tür öffnen.</source>
-        <target>Mit dem richtigen Schlüssel kannst du diese Tür öffnen.</target>
+        <target>Podrás abrir esta puerta si tienes la llave adecuada.</target>
       </segment>
     </unit>
     <unit id="4j6vPUP">
