--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -22963,7 +22963,7 @@
       </notes>
       <segment>
         <source>Mysteriöser Fremder</source>
-        <target>Mysteriöser Fremder</target>
+        <target>Extraño Misterioso</target>
       </segment>
     </unit>
     <unit id="nWjbqz8" name="Die Horde kommt!">
