ES #1993 correction (Coalición -> Alianza)

--- a/translations/game+intl-icu.es.xlf
+++ b/translations/game+intl-icu.es.xlf
@@ -23080,7 +23080,7 @@
       </notes>
       <segment>
         <source>auf {coa_invite} antworten</source>
-        <target>responde a {coa_invite} de coalición</target>
+        <target>responde a la {coa_invite} de alianza</target>
       </segment>
     </unit>
     <unit id="HPWqmw7">
