--- a/translations/items+intl-icu.fr.xlf
+++ b/translations/items+intl-icu.fr.xlf
@@ -8623,7 +8623,7 @@
       </notes>
       <segment>
         <source>Der Bürger hat das Wasser in einem Zug ausgetrunken. Das tut gut!</source>
-        <target>Le citoyen avale d'une traite votre ration d'eau... Ça fait du bien !</target>
+        <target>Le citoyen avale d'une traite sa ration d'eau... Ça fait du bien !</target>
       </segment>
     </unit>
     <unit id="sRDEqVL">
