Corrected french typo

--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -14789,7 +14789,7 @@
       </notes>
       <segment>
         <source>Kleine Koalitionen</source>
-        <target>Ciotyens coalisés</target>
+        <target>Citoyens coalisés</target>
       </segment>
     </unit>
     <unit id="aGs0YSI" name="Die verfluchten Schriften">
