--- a/translations/game+intl-icu.fr.xlf
+++ b/translations/game+intl-icu.fr.xlf
@@ -21699,7 +21699,7 @@ cette violente opération...]]></target>
       </notes>
       <segment>
         <source>Die Ratten haben das Schiff schon vor Tagen verlassen... Diese Stadt ist nur noch ein Schatten ihrer selbst.</source>
-        <target>De toute manière, tous les rats ont déjà abandonné le navire depuis des jours... Cette vile n'est plus que l'ombre d'elle-même.</target>
+        <target>De toute manière, tous les rats ont déjà abandonné le navire depuis des jours... Cette ville n'est plus que l'ombre d'elle-même.</target>
       </segment>
     </unit>
     <unit id="UOD7ZoJ">
