--- a/translations/ghost+intl-icu.de.xlf
+++ b/translations/ghost+intl-icu.de.xlf
@@ -1720,5 +1720,23 @@
         <target>Toxin aktivieren</target>
       </segment>
     </unit>
+    <unit id="o1TozmB">
+      <notes>
+        <note category="from">twig:///templates/ajax/ghost/create_town.html.twig</note>
+      </notes>
+      <segment>
+        <source>Ist diese Option aktiviert, haben frisch in Ghule verwandelte Bürger bereits Hunger.</source>
+        <target>Ist diese Option aktiviert, haben frisch in Ghule verwandelte Bürger bereits Hunger.</target>
+      </segment>
+    </unit>
+    <unit id="v7CDf.f" name="Hungrige Ghule">
+      <notes>
+        <note category="from">twig:///templates/ajax/ghost/create_town.html.twig</note>
+      </notes>
+      <segment>
+        <source>Hungrige Ghule</source>
+        <target>Hungrige Ghule</target>
+      </segment>
+    </unit>
   </file>
 </xliff>
